--- a/templates/admin_cms/admin-menu.html.twig
+++ b/templates/admin_cms/admin-menu.html.twig
@@ -101,7 +101,7 @@
                     <a class="btn btn-danger nav-link" href="deleteUser/{{user.id}}">
                         Delete
                     </a>
-                    <a class="btn btn-success bg-orange nav-link" href="updateUser/{{user.id}}">
+                    <a class="btn btn-success bg-orange nav-link" href="updateUserAdmin/{{user.id}}">
                         Update
                     </a>
                 </div>
