--- a/templates/admin_cms/admin-menu.html.twig
+++ b/templates/admin_cms/admin-menu.html.twig
@@ -60,7 +60,7 @@
                 <div class = col-sm-3>
                     Wage : {{ ad.getWage() }} <br>
                     Place : {{ ad.getPlace() }} <br>
-{#                    Company : {{ ad.getCompany().getName() }} <br>#}
+                    Company : {{ ad.getCompany().getName() }} <br>
                     Creation Date : {{ ad.getCreationDate|date("m/d/Y") }} <br>
                     End Date : {{ ad.getEndDate|date("m/d/Y") }}
                 </div>
