--- a/templates/ads.html.twig
+++ b/templates/ads.html.twig
@@ -1,56 +1,7 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-    <title>JobsHunter</title>
-
-    <!-- Custom fonts for this template-->
-    {#    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">#}
-
-    <!-- Custom styles for this template-->
-    <link href = "../bootstrap/dist/css/bootstrap.css" rel = "stylesheet" type = "text/css">
-    <link href = "../styles/style.css" rel = "stylesheet" type = "text/css">
-</head>
-
-<body class = "d-flex">
-
-
-<!-- CONTENT -->
-<div class = "custom-row flex-fill">
-    <div class = col-sm-12>
-        <nav class="navbar navbar-dark bg-primary">
-            <a class="navbar-brand" href="#">JobsHunter</a>
-            <ul class="list-group-horizontal navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Our current ads<span class="sr-only">(current)</span></a>
-                </li>
-
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="userMenu" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Account information
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="userMenu">See your profile</a>
-                        <a class="dropdown-item" href="/updateUser/{id}">Update your profile</a>
-                        <a class="dropdown-item" href="userMenu">See your applications</a>
-                    </div>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About us</a>
-                </li>
-            </ul>
-
-            <span class="navbar-text">
-                        {% if app.user %}
-                            Welcome {{ app.user.getFirstName() }} <a href="{{ path('app_logout') }}">Logout</a>
-                        {% else %}
-                            <a href="{{ path('app_login') }}">Login</a> or <a href="{{ path('registerPage') }}">Register</a>
-                        {% endif %}
-                        </span>
-    </nav>
-</div>
-
+{% extends 'pageBase.html.twig' %}
+{% block content %}
     <!-- TOPBAR -->
+    <div class = row>
     <div class = "col-sm-12">
         <div class = "topbar row">
             <div class = "col-sm-7">
@@ -126,20 +77,7 @@
 
         {% endfor %}
     </div>
+    </div>
     <!-- END ADS -->
-</div>
 <!-- END CONTENT -->
-
-
-<!-- Bootstrap core JavaScript-->
-<script src="../vendor/jquery/jquery.js"></script>
-<script src="../vendor/bootstrap/js/bootstrap.bundle.js"></script>
-
-<!-- Core plugin JavaScript-->
-<script src="../vendor/jquery-easing/jquery.easing.js"></script>
-
-<!-- Custom JavaScript-->
-<script src="../js/script.js"></script>
-
-</body>
-</html>
+{% endblock %}
