--- a/templates/company_cms/company-menu.html.twig
+++ b/templates/company_cms/company-menu.html.twig
@@ -1,162 +1,108 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-    <title>JobsHunter</title>
 
-    <!-- Custom fonts for this template-->
-    {#    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">#}
+{% extends "pageBase.html.twig" %}
+{% block content %}
+<div class = row>
+    <div class = "col-sm-12 text-center title">
+        Ads
+    </div>
+    <div class = col-sm-12>
+        <a class="btn btn-success nav-link" href="{{ path('create_ad') }}">
+            Create Ad
+        </a>
+    </div>
+    <div class = "col-sm-12">
+        <!-- ADS -->
+        {% for ad in ads %}
+            <div class = "card advertCard">
+                <div class = "card-header">
+                    <div class = row>
+                        <div class = "col-sm-10">
+                            <div class = "d-inline-block pt-2 pl-3">
+                                <span class = "advert" > {{ ad.getTitle() }} </span>
+                            </div>
 
-    <!-- Custom styles for this template-->
-    <link href = "../bootstrap/dist/css/bootstrap.css" rel = "stylesheet" type = "text/css">
-    <link href = "../styles/styles.css" rel = "stylesheet" type = "text/css">
-</head>
-
-<body class = "row">
-
-<!-- NAVBAR-->
-<div class = col-sm-12>
-<nav class="navbar navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">JobsHunter</a>
-    <ul class="list-group-horizontal navbar-nav mr-auto">
-        <li class="nav-item active">
-            <a class="nav-link" href="{{ path('ads_show') }}">Our current ads<span class="sr-only">(current)</span></a>
-        </li>
-        {% if app.user %}
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="userMenu" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Account information
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="userMenu">See your profile</a>
-                    <a class="dropdown-item" href="/updateUser/{id}">Update your profile</a>
-                    <a class="dropdown-item" href="userMenu">See your applications</a>
-                </div>
-            </li>
-        {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="#">About us</a>
-            </li>
-        {% endif %}
-
-    </ul>
-
-    <span class="navbar-text">
-                        {% if app.user %}
-                            Welcome {{ app.user.getFirstName() }} <a href="{{ path('app_logout') }}">Logout</a>
-                        {% else %}
-                            <a href="{{ path('app_login') }}">Login</a> or <a href="{{ path('registerPage') }}">Register</a>
-                        {% endif %}
-                        </span>
-
-</nav>
-</div>
-
-<div class = "col-sm-12">
-    <!-- ADS -->
-    {% for ad in ads %}
-        <div class = "card advertCard">
-            <div class = "card-header">
-                <div class = row>
-                    <div class = "col-sm-10">
-                        <div class = "d-inline-block pt-2 pl-3">
-                            <span class = "advert" > {{ ad.getTitle() }} </span>
-                        </div>
-
-                        <div class = "d-inline-block pt-2 pl-3 pb-2 text-justify magic">
+                            <div class = "d-inline-block pt-2 pl-3 pb-2 text-justify magic">
                                 <span>
                                     {{ ad.getDescription() }}
                                     {#                                    But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?#}
                                     </span>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class = "col-sm-2">
-                        <div class = "container d-flex h-100">
-                            <div class="row justify-content-center align-self-center ml-0">
-                                <a class="btn btn-primary nav-link" href="#MyCollapseCard{{ ad.getId() }}" data-toggle="collapse" role="button"
-                                   aria-expanded="true" aria-controls="MyCollapseCard{{ ad.getId() }}">
-                                    Show Full Information
-                                </a>
-                                <a class="btn btn-success bg-orange nav-link" href="updateAd/{{ad.id}}">
-                                    Update
-                                </a>
-                                <a class="btn btn-danger nav-link" href="deleteAd/{{ad.id}}">
-                                    Delete
-                                </a>
+                        <div class = "col-sm-2">
+                            <div class = "container d-flex h-100">
+                                <div class="row justify-content-center align-self-center ml-0">
+                                    <a class="btn btn-primary nav-link" href="#MyCollapseCard{{ ad.getId() }}" data-toggle="collapse" role="button"
+                                       aria-expanded="true" aria-controls="MyCollapseCard{{ ad.getId() }}">
+                                        Informations
+                                    </a>
+                                    <a class="btn btn-success bg-orange nav-link" href="updateAd/{{ad.id}}">
+                                        Update
+                                    </a>
+                                    <a class="btn btn-danger nav-link" href="deleteAd/{{ad.id}}">
+                                        Delete
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="collapse" id="MyCollapseCard{{ ad.getId() }}">
-                <div class = row>
-                    <div class = "col-sm-12 col-md-5">
-                        <div class = "pl-2 pt-2" style = "min-height : 7rem">
-                            {#                                But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?#}
-                            {{ ad.getDescription() }}
-                        </div>
-                    </div>
-                    <div class = "col-sm-12 col-md-5">
-                        <div class = "pl-2 pt-2">
-                            Wage : {{ ad.getWage() }} <br>
-                            Location : {{ ad.getPlace() }}<br>
-                            Contact : yapa<br>
-                        </div>
-                    </div>
-                    <div class ="col-sm-12 col-md-2 d-flex align-items-center justify-content-center">
-                        <div class = "align-middle d-inline-block">
-                            <button class="btn btn-success" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Apply
-                            </button>
-                            <div class="dropdown-menu applyForm" aria-labelledby="dropdownMenuButton">
-                                <form>
-                                    <div class="mb-1">
-                                        <label for="InputEmail1">Email address :</label>
-                                        <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                                    </div>
-                                    <div class="mb-1">
-                                        <label for="inputFirstName">First Name :</label>
-                                        <input type="text" class="form-control" id="inputFirstName" placeholder="First Name">
-                                    </div>
-                                    <div class="mb-1">
-                                        <label for="inputLastName">Last Name :</label>
-                                        <input type="text" class="form-control" id="inputLastName" placeholder="Last Name">
-                                    </div>
-                                    <div class="mb-1">
-                                        <label for="inputPhone">Phone :</label>
-                                        <input type="text" class="form-control" id="inputPhone" placeholder="Phone">
-                                    </div>
-                                    <div class="mb-1">
-                                        <label for="inputMessage">Message :</label>
-                                        <textarea type="text" rows="5" cols="33" class="form-control" id="inputMessage" placeholder="Message"> </textarea>
-                                    </div>
-
-                                    <button type="submit" class="btn btn-primary">Submit</button>
-                                </form>
+                <div class="collapse" id="MyCollapseCard{{ ad.getId() }}">
+                    <div class = row>
+                        <div class = "col-sm-12 col-md-5">
+                            <div class = "pl-2 pt-2" style = "min-height : 7rem">
+                                {#                                But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?#}
+                                {{ ad.getDescription() }}
                             </div>
                         </div>
+                        <div class = "col-sm-12 col-md-5">
+                            <div class = "pl-2 pt-2">
+                                Wage : {{ ad.getWage() }} <br>
+                                Location : {{ ad.getPlace() }}<br>
+                                Contact : yapa<br>
+                            </div>
+                        </div>
+                        <div class ="col-sm-12 col-md-2 d-flex align-items-center justify-content-center">
+                            <div class = "align-middle d-inline-block">
+                                <button class="btn btn-success" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Apply
+                                </button>
+                                <div class="dropdown-menu applyForm" aria-labelledby="dropdownMenuButton">
+                                    <form>
+                                        <div class="mb-1">
+                                            <label for="InputEmail1">Email address :</label>
+                                            <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                        </div>
+                                        <div class="mb-1">
+                                            <label for="inputFirstName">First Name :</label>
+                                            <input type="text" class="form-control" id="inputFirstName" placeholder="First Name">
+                                        </div>
+                                        <div class="mb-1">
+                                            <label for="inputLastName">Last Name :</label>
+                                            <input type="text" class="form-control" id="inputLastName" placeholder="Last Name">
+                                        </div>
+                                        <div class="mb-1">
+                                            <label for="inputPhone">Phone :</label>
+                                            <input type="text" class="form-control" id="inputPhone" placeholder="Phone">
+                                        </div>
+                                        <div class="mb-1">
+                                            <label for="inputMessage">Message :</label>
+                                            <textarea type="text" rows="5" cols="33" class="form-control" id="inputMessage" placeholder="Message"> </textarea>
+                                        </div>
 
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                    </form>
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-    {% endfor %}
+        {% endfor %}
+    </div>
+    <!-- END ADS -->
 </div>
-<!-- END ADS -->
-</div>
-<!-- END CONTENT -->
-
-
-<!-- Bootstrap core JavaScript-->
-<script src="../vendor/jquery/jquery.js"></script>
-<script src="../vendor/bootstrap/js/bootstrap.bundle.js"></script>
-
-<!-- Core plugin JavaScript-->
-<script src="../vendor/jquery-easing/jquery.easing.js"></script>
-
-<!-- Custom JavaScript-->
-<script src="../js/script.js"></script>
-
-</body>
-</html>
+    <!-- END CONTENT -->
+{% endblock %}
