--- a/templates/company_cms/company-menu.html.twig
+++ b/templates/company_cms/company-menu.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
 <div class = row>
     <div class = "col-sm-12 text-center title">
-        Ads
+        <h3>Published job offers</h3>
     </div>
     <div class = col-sm-12>
         <a class="btn btn-success nav-link" href="{{ path('create_ad') }}">
@@ -24,8 +24,7 @@
                             <div class = "d-inline-block pt-2 pl-3 pb-2 text-justify magic">
                                 <span>
                                     {{ ad.getDescription() }}
-                                    {#                                    But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?#}
-                                    </span>
+                                </span>
                             </div>
                         </div>
 
@@ -51,8 +50,7 @@
                     <div class = row>
                         <div class = "col-sm-12 col-md-5">
                             <div class = "pl-2 pt-2" style = "min-height : 7rem">
-                                {#                                But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?#}
-                                {{ ad.getDescription() }}
+                            {{ ad.getDescription() }}
                             </div>
                         </div>
                         <div class = "col-sm-12 col-md-5">
@@ -64,35 +62,8 @@
                         </div>
                         <div class ="col-sm-12 col-md-2 d-flex align-items-center justify-content-center">
                             <div class = "align-middle d-inline-block">
-                                <button class="btn btn-success" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Apply
-                                </button>
-                                <div class="dropdown-menu applyForm" aria-labelledby="dropdownMenuButton">
-                                    <form>
-                                        <div class="mb-1">
-                                            <label for="InputEmail1">Email address :</label>
-                                            <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                                        </div>
-                                        <div class="mb-1">
-                                            <label for="inputFirstName">First Name :</label>
-                                            <input type="text" class="form-control" id="inputFirstName" placeholder="First Name">
-                                        </div>
-                                        <div class="mb-1">
-                                            <label for="inputLastName">Last Name :</label>
-                                            <input type="text" class="form-control" id="inputLastName" placeholder="Last Name">
-                                        </div>
-                                        <div class="mb-1">
-                                            <label for="inputPhone">Phone :</label>
-                                            <input type="text" class="form-control" id="inputPhone" placeholder="Phone">
-                                        </div>
-                                        <div class="mb-1">
-                                            <label for="inputMessage">Message :</label>
-                                            <textarea type="text" rows="5" cols="33" class="form-control" id="inputMessage" placeholder="Message"> </textarea>
-                                        </div>
-
-                                        <button type="submit" class="btn btn-primary">Submit</button>
-                                    </form>
-                                </div>
+                                
+                            </div>
                             </div>
 
                         </div>
