--- a/templates/pageBase.html.twig
+++ b/templates/pageBase.html.twig
@@ -20,13 +20,13 @@
             <a class="navbar-brand" href="#">JobsHunter</a>
             <ul class="list-group-horizontal navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Our current ads<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/ads">Our current ads<span class="sr-only">(current)</span></a>
                 </li>
                 {% if user is null %}
                 {% elseif user.getRole() == 'user' %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="userMenu" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-
+                        Your account
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="userMenu">See your profile</a>
@@ -35,6 +35,16 @@
                     </div>
                 </li>
                 {% elseif user.getRole() == 'contact' %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="companyMenu" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Company account
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="companyMenu">See your company information</a>
+                        <a class="dropdown-item" href="companyMenu">Update your information</a>
+                        <a class="dropdown-item" href="companyMenu">See received applications</a>
+                    </div>
+                </li>
                 {% elseif user.getRole() == 'admin' %}
                     <a class="nav-link" href="adminMenu">
                         Admin Menu
