--- a/templates/user_cms/update-user.html.twig
+++ b/templates/user_cms/update-user.html.twig
@@ -49,7 +49,7 @@
                     </div>
                     <div class = col-lg-12>
                         <div class = 'register-input m-2 p-2 text-center'>
-                            {{ form_row(form.age) }}
+                            {{ form_row(form.birthdate) }}
                         </div>
                     </div>
                     <div class = col-lg-12>
